--- a/nuxeo-distribution-jboss/pom.xml
+++ b/nuxeo-distribution-jboss/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.distribution</groupId>
     <artifactId>nuxeo-distribution</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
