--- a/nuxeo-distribution-resources/src/main/resources/jetty-base/config/nuxeo.properties
+++ b/nuxeo-distribution-resources/src/main/resources/jetty-base/config/nuxeo.properties
@@ -1,10 +1,10 @@
 # application instance config
-org.nuxeo.ecm.instance.name=Nuxeo 5.4 Server
-org.nuxeo.ecm.instance.description=Nuxeo 5.4 Server on Jetty
+org.nuxeo.ecm.instance.name=Nuxeo 5.5 Server
+org.nuxeo.ecm.instance.description=Nuxeo 5.5 Server on Jetty
 
 # product config
 org.nuxeo.ecm.product.name=Nuxeo DM
-org.nuxeo.ecm.product.version=5.4.3-DEPRECATED
+org.nuxeo.ecm.product.version=5.5-SNAPSHOT
 
 # runtime remoting config
 org.nuxeo.runtime.server.enabled=true
