--- a/nuxeo-platform-directory/nuxeo-platform-directory-api/pom.xml
+++ b/nuxeo-platform-directory/nuxeo-platform-directory-api/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-directory-parent</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-platform-directory-api</artifactId>
