--- a/nuxeo-opencmis-bindings/pom.xml
+++ b/nuxeo-opencmis-bindings/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-opencmis-bindings</artifactId>
