--- a/nuxeo-opensocial-container-webapp/pom.xml
+++ b/nuxeo-opensocial-container-webapp/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.opensocial</groupId>
     <artifactId>nuxeo-opensocial-parent</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.opensocial</groupId>
