--- a/nuxeo-opensocial-features/pom.xml
+++ b/nuxeo-opensocial-features/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.opensocial</groupId>
     <artifactId>nuxeo-opensocial-parent</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
 
   <artifactId>nuxeo-opensocial-features</artifactId>
