--- a/nuxeo-platform-importer-core/pom.xml
+++ b/nuxeo-platform-importer-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-platform-importer</artifactId>
-    <version>5.4.3-DEPRECATED</version>
+    <version>5.5-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo.ecm.platform</groupId>
