--- a/nuxeo-core-storage-sql/nuxeo-core-storage-sql/pom.xml
+++ b/nuxeo-core-storage-sql/nuxeo-core-storage-sql/pom.xml
@@ -10,6 +10,7 @@
   </parent>
 
   <artifactId>nuxeo-core-storage-sql</artifactId>
+  <version>1.6.2-NXP-6038</version>
   <name>Nuxeo Core SQL Storage</name>
   <description>Nuxeo Core: SQL Storage.</description>
 
