--- a/nuxeo-distribution-dm/ftest/funkload/pom.xml
+++ b/nuxeo-distribution-dm/ftest/funkload/pom.xml
@@ -27,16 +27,47 @@
         <groupId>org.nuxeo.build</groupId>
         <artifactId>nuxeo-distribution-tools</artifactId>
          <executions>
-          <execution>
-            <id>run-tests</id>
-            <phase>integration-test</phase>
+           <execution>
+          <id>start-nuxeo</id>
+            <phase>pre-integration-test</phase>
             <goals>
               <goal>build</goal>
             </goals>
             <configuration>
               <buildFile>${basedir}/itests.xml</buildFile>
-              <target>run-funkload-tests</target>
+              <targets>
+                <target>prepare-environment</target>
+                <target>start</target>
+              </targets>
+            </configuration>
+          </execution>
+          <execution>
+            <id>run-tests</id>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <buildFile>${basedir}/itests.xml</buildFile>
+              <targets>
+                <target>make-legacy-dirs</target>
+                <target>run-funkload-tests</target>
+              </targets>
               <testFailureIgnore>true</testFailureIgnore>
+            </configuration>
+          </execution>
+           <execution>
+          <id>stop-nuxeo</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>build</goal>
+            </goals>
+            <configuration>
+              <buildFile>${basedir}/itests.xml</buildFile>
+              <targets>
+                <target>stop</target>
+                <target>cleanup-environment</target>
+              </targets>
             </configuration>
           </execution>
         </executions>
