--- a/nuxeo-core-storage-sql/nuxeo-core-storage-sql-ra/pom.xml
+++ b/nuxeo-core-storage-sql/nuxeo-core-storage-sql-ra/pom.xml
@@ -20,73 +20,284 @@
   </properties>
 
   <dependencies>
-      <!-- setting direct dependency in provided scope do not filter indirect dependencies in rar assembly -->
-      <!--dependency><groupId>avalon-framework</groupId><artifactId>avalon-framework</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>cglib</groupId><artifactId>cglib-nodep</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>com.sun.xml</groupId><artifactId>relaxngDatatype</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>com.sun.xml</groupId><artifactId>xsom</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>com.thoughtworks.xstream</groupId><artifactId>xstream</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-beanutils</groupId><artifactId>commons-beanutils</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-codec</groupId><artifactId>commons-codec</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-collections</groupId><artifactId>commons-collections</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-httpclient</groupId><artifactId>commons-httpclient</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-io</groupId><artifactId>commons-io</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-jexl</groupId><artifactId>commons-jexl</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-lang</groupId><artifactId>commons-lang</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>commons-logging</groupId><artifactId>commons-logging</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>concurrent</groupId><artifactId>concurrent</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>cup</groupId><artifactId>java-cup</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>dom4j</groupId><artifactId>dom4j</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>geronimo-spec</groupId><artifactId>geronimo-spec-jta</artifactId><scope>provided</scope></dependency-->
-      <!--dependency><groupId>howl</groupId><artifactId>howl-logger</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>javassist</groupId><artifactId>javassist</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>javax.resource</groupId><artifactId>connector</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>javax.resource</groupId><artifactId>connector-api</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>javax.script</groupId><artifactId>script-api</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>javax.servlet</groupId><artifactId>servlet-api</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>javax.transaction</groupId><artifactId>jta</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>joda-time</groupId><artifactId>joda-time</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>jotm</groupId><artifactId>jotm</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>jotm</groupId><artifactId>jotm_jrmp_stubs</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>log4j</groupId><artifactId>log4j</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>logkit</groupId><artifactId>logkit</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>org.apache.geronimo.components</groupId><artifactId>geronimo-connector</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.apache.geronimo.components</groupId><artifactId>geronimo-transaction</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>org.apache.geronimo.specs</groupId><artifactId>geronimo-annotation_1.0_spec</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>org.apache.geronimo.specs</groupId><artifactId>geronimo-j2ee-connector_1.5_spec</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.apache.geronimo.specs</groupId><artifactId>geronimo-jta_1.1_spec</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.freemarker</groupId><artifactId>freemarker</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.javasimon</groupId><artifactId>javasimon-core</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.javasimon</groupId><artifactId>javasimon-jdbc3</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.javasimon</groupId><artifactId>javasimon-jmx</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.milyn</groupId><artifactId>flute</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.milyn</groupId><artifactId>milyn-commons</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.milyn</groupId><artifactId>milyn-magger</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.mortbay.jetty</groupId><artifactId>jetty</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.mortbay.jetty</groupId><artifactId>jetty-annotations</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.mortbay.jetty</groupId><artifactId>jetty-plus</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.mortbay.jetty</groupId><artifactId>jetty-util</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.mvel</groupId><artifactId>mvel2</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.common</groupId><artifactId>nuxeo-common</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core-api</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core-convert-api</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core-event</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core-query</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core-schema</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.ecm.core</groupId><artifactId>nuxeo-core-storage-sql</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.runtime</groupId><artifactId>nuxeo-runtime</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.nuxeo.runtime</groupId><artifactId>nuxeo-runtime-management</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>org.objectweb.carol</groupId><artifactId>carol</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>org.objectweb.howl</groupId><artifactId>howl</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.osgi</groupId><artifactId>osgi-core</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-api</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-log4j12</artifactId><scope>provided</scope></dependency>
-      <dependency><groupId>org.w3c</groupId><artifactId>sac</artifactId><scope>provided</scope></dependency>
-      <!--dependency><groupId>org.w3c.css</groupId><artifactId>sac</artifactId><scope>provided</scope></dependency-->
-      <!--dependency><groupId>stax</groupId><artifactId>stax-api</artifactId><scope>provided</scope></dependency-->
-      <dependency><groupId>xerces</groupId><artifactId>xercesImpl</artifactId><scope>provided</scope></dependency>
-    </dependencies>
+    <!-- setting direct dependency in provided scope do not filter indirect dependencies
+      in rar assembly -->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib-nodep</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml</groupId>
+      <artifactId>relaxngDatatype</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml</groupId>
+      <artifactId>xsom</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.thoughtworks.xstream</groupId>
+      <artifactId>xstream</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-jexl</groupId>
+      <artifactId>commons-jexl</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>concurrent</groupId>
+      <artifactId>concurrent</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>cup</groupId>
+      <artifactId>java-cup</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>dom4j</groupId>
+      <artifactId>dom4j</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.resource</groupId>
+      <artifactId>connector-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.script</groupId>
+      <artifactId>script-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.transaction</groupId>
+      <artifactId>jta</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>jotm</groupId>
+      <artifactId>jotm</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.components</groupId>
+      <artifactId>geronimo-connector</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.components</groupId>
+      <artifactId>geronimo-transaction</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.geronimo.specs</groupId>
+      <artifactId>geronimo-jta_1.1_spec</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.freemarker</groupId>
+      <artifactId>freemarker</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.javasimon</groupId>
+      <artifactId>javasimon-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.javasimon</groupId>
+      <artifactId>javasimon-jdbc3</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.javasimon</groupId>
+      <artifactId>javasimon-jmx</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.milyn</groupId>
+      <artifactId>flute</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.milyn</groupId>
+      <artifactId>milyn-commons</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.milyn</groupId>
+      <artifactId>milyn-magger</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty-annotations</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty-plus</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jetty-util</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mvel</groupId>
+      <artifactId>mvel2</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.common</groupId>
+      <artifactId>nuxeo-common</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-convert-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-event</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-query</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-schema</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.core</groupId>
+      <artifactId>nuxeo-core-storage-sql</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.runtime</groupId>
+      <artifactId>nuxeo-runtime-management</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.objectweb.howl</groupId>
+      <artifactId>howl</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi-core</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.w3c</groupId>
+      <artifactId>sac</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>xerces</groupId>
+      <artifactId>xercesImpl</artifactId>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 
   <build>
     <resources>
