--- a/nuxeo-platform-forms-layout-io/pom.xml
+++ b/nuxeo-platform-forms-layout-io/pom.xml
@@ -13,17 +13,11 @@
   <name>Nuxeo Forms Layout IO</name>
 
   <dependencies>
+
+    <!-- minimal dependencies to be easily used by GWT code, for instance -->
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-forms-layout-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.core</groupId>
-      <artifactId>nuxeo-core-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-directory-api</artifactId>
     </dependency>
     <dependency>
       <groupId>net.sf.json-lib</groupId>
@@ -52,7 +46,6 @@
       <artifactId>jsf-facelets</artifactId>
       <scope>test</scope>
     </dependency>
-
 
   </dependencies>
 
