--- a/pom.xml
+++ b/pom.xml
@@ -686,6 +686,11 @@
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
+        <artifactId>nuxeo-platform-forms-layout-io-plugins</artifactId>
+        <version>${nuxeo.jsf.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-seam-debug</artifactId>
         <version>${nuxeo.jsf.version}</version>
       </dependency>
